# KiddleMentor-dev

./: .gitignore  BACKEND_REFACTORING.md  BACKEND_REFACTORING_PLAN.md  EMBEDDING_CONFIGURATION.md  Makefile  QUICK_START.md  README.md  SCRIPTS_DOCUMENTATION.md  STORE.md  pyproject.toml  requirements-dev.txt  requirements.txt  wiki.md
.github/workflows/: tests.yml
apps/backend/: README.md  config.py  dependencies.py  exceptions.py  main.py  schemas.py  test_integration.py  test_refactored.py  wiki.md
apps/backend/api/v1/: router.py
apps/backend/middleware/: error_handler.py
apps/backend/models/: __init__.py  common.py  defaults.py  requests.py  responses.py
apps/backend/repositories/: __init__.py  base.py  learner_repository.py
apps/backend/services/: llm_service.py  memory_service.py  user_registry.py
apps/frontend/: FRONTEND_BUILD_TEST.md  FRONTEND_INTEGRATION_COMPLETE.md  FRONTEND_REFACTORING_PLAN.md  LANDING_PAGE_DARK_MODE_FIXES.md  THEME_TOGGLE_IMPROVEMENTS.md  next.config.ts  package-lock.json  package.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: AITutorChat.tsx  GoalContext.tsx  LibraryCard.tsx  MistakeBook.tsx  ThemeToggle.tsx
apps/frontend/src/lib/: api.ts
apps/frontend_streamlit/: README.md  wiki.md
apps/frontend_streamlit/components/: chatbot.py  gap_identification.py  goal_refinement.py  topbar.py
apps/frontend_streamlit/pages/: goal_management.py  knowledge_document.py  learner_profile.py  learning_path.py  skill_gap.py
apps/frontend_streamlit/services/: api_client.py
apps/frontend_streamlit/utils/: request_api.py
examples/memory_files/: README.md  chat_history.json  learning_goal.json  learning_path.json  mastery.json  objectives.json  profile.json  skill_gaps.json  user_facts.md
gen_mentor/: __main__.py
gen_mentor/agents/: __init__.py  base_agent.py
gen_mentor/agents/assessment/: __init__.py  performance_evaluator.py  quiz_generator.py
gen_mentor/agents/assessment/prompts/: __init__.py  performance_evaluation.py  quiz_generation.py
gen_mentor/agents/content/: __init__.py  content_creator.py  document_integrator.py  feedback_simulator.py  knowledge_drafter.py  knowledge_explorer.py  path_scheduler.py
gen_mentor/agents/content/prompts/: __init__.py  content_creator.py  document_integration.py  feedback_simulation.py  knowledge_drafting.py  knowledge_exploration.py  path_scheduling.py
gen_mentor/agents/learning/: __init__.py  behavior_simulator.py  goal_refiner.py  learner_profiler.py  profile_creator.py  skill_gap_identifier.py  skill_mapper.py
gen_mentor/agents/learning/prompts/: __init__.py  profiling.py
gen_mentor/agents/tutoring/: __init__.py  chatbot.py
gen_mentor/agents/tutoring/prompts/: __init__.py  chatbot.py
gen_mentor/cli/: main.py  onboard.py
gen_mentor/config/: README.md  __init__.py  config.example.yaml  loader.py  schemas.py
gen_mentor/core/: __init__.py
gen_mentor/core/base/: __init__.py  data.py
gen_mentor/core/llm/: __init__.py  factory.py
gen_mentor/core/memory/: __init__.py  memory_store.py
gen_mentor/core/tools/: __init__.py
gen_mentor/core/tools/embedding/: __init__.py
gen_mentor/core/tools/filesystem/: __init__.py  tools.py
gen_mentor/core/tools/rag/: __init__.py  retriever.py
gen_mentor/core/tools/retrieval/: embedder_factory.py  search_rag.py  searcher_factory.py
gen_mentor/core/tools/search/: factory.py
gen_mentor/schemas/: __init__.py  assessment.py  content.py  learning.py  tutoring.py
gen_mentor/tests/: STRUCTURE.md
gen_mentor/utils/: config.py  helpers.py  suppress_warnings.py
scripts/: start_all.sh  start_backend.sh  start_frontend.sh
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_assessment_agents.py  test_content_agents.py  test_learning_agents.py  test_tutoring_agents.py
tests/unit/: __init__.py  test_base_agent.py  test_config.py  test_llm_factory.py  test_memory_store.py  test_schemas.py  test_utils.py
wiki/: schema.md  wiki_algo.md  wiki_backend.md  wiki_frontend.md
(+25 files in other folders)
